--- a/sales.html
+++ b/sales.html
@@ -5,8 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-<body>
-  
+<body id="body">
+
+
+  <section id="cookiesPerHour">
+    <h1></h1>
+    <ul id="list-section">
+    </ul>
+  </section>
+
 </body>
-<script href="app.js"></script>
+<script src="app.js"></script>
 </html>
