--- a/sales.html
+++ b/sales.html
@@ -8,11 +8,9 @@
 <body id="body">
 
 
-  <section id="cookiesPerHour">
-    <h1></h1>
-    <ul id="list-section">
-    </ul>
-  </section>
+  <table id="table-section">
+    
+  </table>
 
 </body>
 <script src="app.js"></script>
