--- a/sales.html
+++ b/sales.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Sales</title>
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body id="body">
 
@@ -13,5 +15,5 @@
   </table>
 
 </body>
-<script src="app.js"></script>
+<script src="js/app.js"></script>
 </html>
