updating html on homepage and sales page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,52 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <a href="sales.html">Sales</a>
+  <body>
+    <header>
+      <nav>
+        <a href="index.html">
+          <img src="img/salmon.png" alt="logo">
+        </a>
+        <ul>
+          <li><a href="sales.html">Sales</a></li>
+          <li><a href="#">Nav Item 2</a></li>
+          <li><a href="#">Nav Item 3</a></li>
+          <li><a href="#">Nav Item 4</a></li>
+        </ul>
+      </nav>
+    </header>
+  
+    <main>
+      <img src="img/family.jpg" alt="family hero img">
+      <img src="img/chinook.jpg" alt="chinook">
+      <img src="img/cutter.jpeg" alt="cookie cutter">
+      <img src="img/fish.jpg" alt="multiple cartoon fish">
+      <img src="img/frosted-cookie.jpg" alt="frosted fish cookie">
+      <img src="img/shirt.jpg" alt="fish shirt">
+      <article>
+        <div>
+          <h3>Locations</h3>
+            <h4>Seattle</h4>
+              <p>15 Lincoln Ave, Seattle, WA</p>
+            <h4>Tokyo</h4>
+              <p>7901 W Manatee Ln, Tokyo</p>
+            <h4>Dubai</h4>
+              <p>60600 Majestic Way, Dubai</p>
+            <h4>Paris</h4>
+              <p>674 Bonjour Rd, Paris</p>
+            <h4>Lima</h4>
+              <p>82 St. Jermaine Blvd, Lima</p>
+          <h3>Hours Open</h3>
+            <p>Sunday - Saturday: 6:00 am - 7:00 pm</p>
+          <h3>Contact Information</h3>
+            <p>Phone: (784)936-5875</p>
+            <p>email: pat@psc.com</p>
+        </div>
+        <a href="">Call to Action</a>
+      </article>
+    </main>
+  
+    <footer></footer>
+  
 </body>
 </html>
