--- a/sales.html
+++ b/sales.html
@@ -8,7 +8,19 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body id="body">
-
+  <header>
+    <nav>
+      <a href="index.html">
+        <img src="img/salmon.png" alt="logo">
+      </a>
+      <ul>
+        <li><a href="sales.html">Sales</a></li>
+        <li><a href="#">Nav Item 2</a></li>
+        <li><a href="#">Nav Item 3</a></li>
+        <li><a href="#">Nav Item 4</a></li>
+      </ul>
+    </nav>
+  </header>
 
   <table id="table-section">
     
