--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>Salmon Cookies Home</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,600;1,300;1,600&display=swap" rel="stylesheet">
 </head>
 <body>
   <body>
@@ -24,12 +27,12 @@
     </header>
   
     <main>
-      <img src="img/family.jpg" alt="family hero img">
-      <img src="img/chinook.jpg" alt="chinook">
-      <img src="img/cutter.jpeg" alt="cookie cutter">
-      <img src="img/fish.jpg" alt="multiple cartoon fish">
-      <img src="img/frosted-cookie.jpg" alt="frosted fish cookie">
+      <img src="img/family.jpg" alt="family hero img" id="heroimg">
+      <img src="img/cutter.jpeg" alt="cookie cutter" class="subimg2">
+      <img src="img/fish.jpg" alt="multiple cartoon fish" class="subimg2">
+      <img src="img/frosted-cookie.jpg" alt="frosted fish cookie" class="subimg2">
       <img src="img/shirt.jpg" alt="fish shirt">
+      <img src="img/chinook.jpg" alt="chinook" id="subimg1">
       <article>
         <div>
           <h3>Locations</h3>
@@ -49,7 +52,7 @@
             <p>Phone: (784)936-5875</p>
             <p>email: pat@psc.com</p>
         </div>
-        <a href="">Call to Action</a>
+        <a href="">Get in touch!</a>
       </article>
     </main>
   
