--- a/sales.html
+++ b/sales.html
@@ -6,6 +6,9 @@
   <title>Sales</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,600;1,300;1,600&display=swap" rel="stylesheet">
 </head>
 <body id="body">
   <header>
@@ -22,10 +25,16 @@
     </nav>
   </header>
 
-  <table id="table-section">
-    
-  </table>
+  <main>
+    <h1>Sales</h1>
 
+    <table id="table-section">
+    
+    </table>
+
+  </main>
+
+  <footer></footer>
 </body>
 <script src="js/app.js"></script>
 </html>
