--- a/sales.html
+++ b/sales.html
@@ -32,9 +32,28 @@
     
     </table>
 
+    <form id="sales-form">
+      <fieldset>
+        <legend>Enter New Location Information</legend>
+        <label>Location Name
+          <input type="text" name="locName" placeholder="ex: Seattle">
+        </label>
+        <label>Minimum Amount of Customers per Hour
+          <input type="number" name="minCust">
+        </label>
+        <label>Maximum Amount of Customers per Hour
+          <input type="number" name="maxCust">
+        </label>
+        <label>Average Cookies Purchased per Customer
+          <input type="number" name="avgCookies">
+        </label>
+        <button type="submit">Submit to Table</button>
+      </fieldset>
+    </form>
+
   </main>
 
   <footer></footer>
+  <script src="js/app.js"></script>
 </body>
-<script src="js/app.js"></script>
 </html>
