final touch ups

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <nav>
         <a href="index.html">
           <img src="img/salmon.png" alt="logo">
+          <h2>Pat's Salmon Cookies</h2>
         </a>
         <ul>
           <li><a href="sales.html">Sales</a></li>
@@ -27,8 +28,10 @@
     </header>
   
     <main>
+      <h1>Welcome to Pat's Salmon Cookies!</h1>
       <img src="img/family.jpg" alt="family hero img" id="heroimg">
       <img src="img/cutter.jpeg" alt="cookie cutter" class="subimg2">
+      <p>Well, it's ofFISHal. We make REALLY REALLY good Salmon Cookies. They are very soFISHicated! Try some today!</p>
       <img src="img/fish.jpg" alt="multiple cartoon fish" class="subimg2">
       <img src="img/frosted-cookie.jpg" alt="frosted fish cookie" class="subimg2">
       <img src="img/shirt.jpg" alt="fish shirt">
