--- a/sales.html
+++ b/sales.html
@@ -15,6 +15,7 @@
     <nav>
       <a href="index.html">
         <img src="img/salmon.png" alt="logo">
+        <h2>Pat's Salmon Cookies</h2>
       </a>
       <ul>
         <li><a href="sales.html">Sales</a></li>
